ROOT-Maven/src/main/webapp/static/css/ev_common_sciverse.css
/* ... */
#suites ul.suites li a.selected {font-weight:bold;}
#suites ul.suites li a.last {background:none;}

#login {position:absolute; top:7px; right:3px; z-index:350; background:#fff; }
#loginBox a {color:#0156AA;font-size: 12px;}
#login ul li a {padding:0px 8px 0px 8px; color:#0156AA; text-decoration: none}
#login ul li {list-style:none;  padding-right:5px; float:left; font-size:12px; background:url(/static/images/divider_login.gif) no-repeat 100% 50%;}
#divJSLogin{padding-right:5px;display:inline;}
#loginBox #username, #loginBox #password{
	width:100px;
}
#login ul li a.minus {
	border-top: 1px solid #9B9B9B;
	border-left: 1px solid #9B9B9B;
	border-right: 1px solid #9B9B9B;
    border-bottom: none;
	cursor: pointer;
    padding: 0 25px 6px 5px;
    text-decoration: none;
	position:relative;
    background: url(/static/images/login_collapse.gif) no-repeat 90% 25%;
    _background:url(/static/images/login_collapse.gif) no-repeat 4px 50%;
    z-index:104;

}
#login ul li a.plus {
    padding: 0 26px 6px 6px;
    border:0;
    cursor:pointer;
    display: inline;
    text-decoration: none;
    background: url(/static/images/login_expand.gif) no-repeat 90% 25%;
    _background:url(/static/images/login_expand.gif) no-repeat 4px 50%;
    z-index:104;
}

#login ul li.logout a.plus {
     background: url(/static/images/login_expand.gif) no-repeat 50% 25%;
    _background:url(/static/images/login_expand.gif) no-repeat 4px 50%;
    border: 0 none;
    margin-left: 0;
    padding: 0 9px;
    position: relative;
    z-index:104;
}
#login ul li.logout a.minus {
	background: url(/static/images/login_collapse.gif) no-repeat 50% 25%;
    padding: 0 9px 4px 9px;
}
li.logout #truncateDiv{
	margin-right:5px;

}
#login ul {margin:0; padding:0 0 0 10px;}

#login ul li.selected {font-weight:bold;}

#login ul li.login {background:url(/static/images/divider_login.gif) no-repeat 100% 50%;padding:0 4px 0 3px;}
#login ul li.last {background:none;}


#login #specific_links { float: left; padding-left: 5px }

#loginBox {position:absolute; width:300px; z-index:350; right:104px; top:27px !important; border:1px solid #9B9B9B;font-size:1em; }

#loginBox .padding {padding:5px 15px 0 15px;}


#login-box-form {margin:0; padding:0;}
#login-box-form p {margin:0 0 6px 0;}
#login-box-form label {text-align:left;}
#login-box-form label span, x:-moz-any-link {display:-moz-inline-stack; display:inline=block;} /* Firefox 2 hack */
#login-box-form label span {
		width:64px;
		cursor:default;
		margin:0;
		font-weight:normal;
		text-align:right;
		display: inline-block;
}

#login-box-form label input {width:157px;  margin: 0 0 0 4px;border:1px solid;border-color:#9b9b9b;top:0;}
.login-box-form p.remember {margin:10px 0 0 68px; _margin:10px 0 0 64px;*margin:10px 0 0 64px;padding:0;}
.login-box-form p.remember input {margin:0; font-weight:bold;vertical-align: middle;}
.login-box-form p.remember label {margin:0 0 0 5px;_margin:0px;*margin:0px;}
#login-box-form p.submit {margin:10px 0 0 68px; padding:0; line-height:0;}
#login-box-form p.submit span {line-height:14px;}
#login-box-form p.submit input.button {margin:0 5px 0 0; font-weight:bold;}


#loginBox p.forgotpass {margin:5px 0 0 0;}
#loginBox p.institutiontext {padding:5px 0 10px 0; margin:0;border-top: 1px solid #9B9B9B;}
#loginBox p.remember label {font-weight: normal;}

#logoutBox {position:absolute; width:258px; background:#BBDAD2;right:80px; top:23px; border:1px solid #9B9B9B;z-index:350;}
#logoutBox .orgName { padding: 10px 10px 5px 10px}

#logoutBox .orgLink, #logoutBox .manraenabledtext{
	padding-left:10px;
	padding-bottom:10px;
}


#login-box-form p {clear: both}

#loginPageForm .rightCol{width:275px}
#loginPageForm .leftCol{width:350px}
#loginPageForm .register_tz{width:275px;padding-top:5px;}
.loginPagerow span {
	cursor: default;
	display: inline-block;
	margin-right: 5px;
	text-align: right;
	width: 100px;
}
.loginPagerow .dividerPipe {
	margin: 0 7px;
	text-align: left;
	width: auto;
}

.remember #remember{
	margin:0px;
	margin-right:5px;
}
#userBox {position:absolute; width:258px; background:#ccfef3; z-index:1; right:186px; top:29px; *top:28px !important; border:1px solid #9B9B9B;}
#userBox, x:-moz-any-link   {_top:27px; top:29px;}
#userBox .padding {padding:14px;}
#userBox p {margin:0 0 5px 0;}

#custom-logo-top {color: black;background-color:white; border: 1px solid #148C75; margin-top:-50px; position: relative;height: 60px; width:234px; overflow: hidden;}
#custom-logo-img {}

.navigation {height: 22px; position:relative; background-color:#148C75; color:#fff; border-top:3px solid #999999; border-bottom:3px solid #D7D7D7; width:100%;}

ul.main {float:left; height:29px;}
ul.misc {float:right; height:29px;}
ul.nav {margin:0; padding:0;}
ul.nav li {list-style:none; margin:0; padding:8px 0 8px 0; float:left; line-height:8px; background:url(/static/images/divider_nav.gif) no-repeat 100% 50%;}
ul.nav li.nodivider {list-style:none; margin:0; padding:8px 0 8px 0; float:left; background: none}
ul.nav li a {padding:0px 12px 0px 12px; margin:0; color:#fff; white-space:nowrap;}
ul.nav li a.selected {font-weight:bold;}
ul.nav li a, ul.nav li a:link, ul.nav li a:hover, ul.nav li a:visited { color:#fff;}
ul.nav li.last {background:none !important;}

#settingMenu li{background-image:none;}

.contentBody {z-index:1; margin:0 0 10px 0; display:block;}
.bgGrey {background-color:#e8e8e8;}

.contentMain {background-color:#E8E8E8; border:1px solid #ABABAB; margin:10px 0}
.contentMain .contentShadow {-moz-box-shadow: 2px 2px 5px #aaa; -webkit-box-shadow: 2px 2px 5px #aaa; box-shadow: 2px 2px 5px #aaa; }
.contentMain .contentBorders {}
.contentMain .contentPadding {padding:8px;}

.shadowbox {
-moz-box-shadow: 2px 2px 5px #aaa;
-webkit-box-shadow: 2px 2px 5px #aaa;
box-shadow: 2px 2px 5px #aaa;
}

div.hr {height:1px; color: #d7d7d7; background:#d7d7d7 no-repeat scroll center;margin:0;}
div.hr hr {display: none;}
/* ... */

